# automatica

./: Cargo.toml  README.md
src/: lib.rs
src/input/: constants.rs  mod.rs
src/input/systems/: mod.rs  mouse_input.rs  move_camera.rs  print.rs
src/logic/: constants.rs  mod.rs
src/logic/systems/: electricity.rs  mod.rs  reset.rs
src/map/: constants.rs  mod.rs
src/map/resources/: cursor_index.rs  cursor_pos.rs  cursor_tile.rs  map.rs  mod.rs
src/map/systems/: change_tile_colour.rs  mod.rs  setup.rs  update_cursor_index.rs  update_cursor_pos.rs  update_cursor_tile.rs
